# copilot-dashboard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
docker/: README.md
server/copilot_dashboard/: __init__.py  __main__.py  alerts.py  app.py  discovery.py  hidden.py  parser.py  store.py
web/: app.js  index.html  style.css
